<resources>
    <string name="app_name">Anime App</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="top_airing">Top Airing</string>
    <string name="top_upcoming">Top Upcoming</string>
    <string name="top_favorite">Top Favorite</string>
    <string name="season_later">Season Later</string>
    <string name="schedule">Schedule</string>
    <string name="genre">Genre</string>
</resources>
